<resources>
    <string name="app_name">Tapping</string>
    <string name="default_score">%1$d</string>
    <string name="high_score">High Score: %1$d</string>
    <string name="timer">00 : %1$s</string>
    <string name="restart_button">Restart Button</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="reset_high_score">Reset High Score</string>
</resources>